# ai-automation-starter-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_HERE.command  START_HERE_WINDOWS.bat  START_WITH_AI.ja.txt  START_WITH_AI.txt  START_WITH_CODEX.ja.md  START_WITH_CODEX.md  pyproject.toml  setup.py
docs/: AI_AGENT_GRILL_ME_SKILL.ja.md  AI_AGENT_GRILL_ME_SKILL.md  AI_AGENT_SETUP_ASSISTANT_PLAYBOOK.ja.md  AI_AGENT_SETUP_ASSISTANT_PLAYBOOK.md  AI_BEGINNER_SUPPORT_MAP.ja.md  AI_BEGINNER_SUPPORT_MAP.md  AI_EMPLOYEE_ROADMAP.ja.md  AI_GRILL_ME_GUIDE.ja.md  AI_GRILL_ME_GUIDE.md  AI_PROMPTS.ja.md  AI_RECEPTION_EMPLOYEE_PACK.md  AUTOMATION_EXPANSION_GUIDE.ja.md  AUTOMATION_EXPANSION_GUIDE.md  AUTOMATION_PROOF_LAB.html  AUTOMATION_PROOF_LAB.ja.html  AUTOPILOT_READINESS_DESIGN.ja.md  AUTOPILOT_READINESS_DESIGN.md  BEGINNER_GUIDE.ja.md  BEGINNER_GUIDE.md  BEGINNER_ROUTE_MAP.ja.md  BEGINNER_ROUTE_MAP.md  CLIENT_DELIVERY_SUPPORT_RUNBOOK.ja.md  CLIENT_DELIVERY_SUPPORT_RUNBOOK.md  CLIENT_DEMO_SCRIPT.ja.md  CLIENT_DEMO_SCRIPT.md  CLOUD_BEGINNER_PLAYBOOK.ja.md  CLOUD_BEGINNER_PLAYBOOK.md  CLOUD_DEPLOYMENT_GUIDE.ja.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_TROUBLESHOOTING.ja.md  CLOUD_TROUBLESHOOTING.md  CONNECTOR_SETUP_GUIDE.ja.md  CONNECTOR_SETUP_GUIDE.md  EXECUTION_BRIDGES.ja.md  EXECUTION_BRIDGES.md  FAQ.ja.md  FAQ.md  FIRST_CLIENT_WALKTHROUGH.ja.md  FIRST_CLIENT_WALKTHROUGH.md  FIRST_PROJECT.html  (+48 more)
scripts/: first_start.py  public_release_audit.py  release_smoke.py  run_all_demos.py
tests/: test_adapter_artifacts.py  test_artifacts.py  (+42 more)
(+172 files in other folders)
