[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-automation-starter-kit"
version = "0.1.0"
description = "Starter kit for reusable AI automation workflows."
requires-python = ">=3.9"

[project.scripts]
ai-automation-kit = "ai_automation_kit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
